added google logins

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "better-auth": "^1.1.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
