--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "better-auth": "^1.1.4",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
