--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   ],
   "devDependencies": {
     "concurrently": "^9.1.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "react-icons": "^5.4.0"
   }
 }
