--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "better-auth": "^1.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   }
