testing with jest

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,7 +15,8 @@
     "skipLibCheck": true,
     "baseUrl": "./",
     "forceConsistentCasingInFileNames": true,
-    "paths": { "@/*": ["./src/*"] }
+    "paths": { "@/*": ["./src/*"] },
+    "types": ["jest"]
     // "types": ["jest"],
     // "noUnusedLocals": true
   },
