--- a/backend/package.json
+++ b/backend/package.json
@@ -7,23 +7,31 @@
     "build": "tsc --build && tsc-alias",
     "format": "prettier --write .",
     "dev": "nodemon src/index.ts --ext ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --no-cache --detectOpenHandles --maxWorkers=20%"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/socket.io": "^3.0.2",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
@@ -33,6 +41,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "socket.io": "^4.8.1",
-    "tsc-alias": "^1.8.10"
+    "socket.io-client": "^4.8.1",
+    "tsc-alias": "^1.8.10",
+    "validator": "^13.12.0"
   }
 }
